fleshed out sample data, next is css cleanup

--- a/rawMarkupClassic.html
+++ b/rawMarkupClassic.html
@@ -46,7 +46,7 @@
   </header>
   <main>
     <section class="classicGridSection" role="application" style="display: inline-block;text-align: center;width: 400px;">
-      <div class="grid" role="grid">
+      <div class="classicGrid" role="grid">
         <!-- the rows of the grid -->
         <div class="classicGridDateCol" role="grid">
           <div class="classicGridMonthName" role="columnheader">April</div>
@@ -357,7 +357,7 @@
       </div>
     </section>
     <aside class="classicAside">
-      <div class="supportingInfo">
+      <div class="classicSupportingInfo">
         <button role="switch" type="button" class="switchBtn">Assign Shifts <i class="fas fa-chevron-down"></i></button>
         <div role="presentation" class="shiftComponent">
           <ul role="listbox">
