finished basic styling in mockup. next is make dynamic with react

--- a/rawMarkupClassic.html
+++ b/rawMarkupClassic.html
@@ -13,8 +13,8 @@
 <body>
   <header>
     <div role="presentation" class="viewSelectBtns">
-      <button type="button" class="active"><i class="fas fa-th fa-2x"></i></button>
-      <button type="button"><i class="far fa-calendar-alt fa-2x"></i></button>
+      <button type="button" class="viewSelectBtn active"><i class="fas fa-th fa-2x"></i></button>
+      <button type="button" class="viewSelectBtn"><i class="far fa-calendar-alt fa-2x"></i></button>
     </div>
     <div role="presentation" class="headerDateSelector">
       <div class="headerFlexContainer" role="presentation">
@@ -39,13 +39,13 @@
         </ol>
       </div>
       <div role="presentation" class="headerExportBtns">
-        <button type="button"><i class="far fa-file-excel fa-2x"></i></button>
-        <button type="button"><i class="far fa-file-pdf fa-2x"></i></button>
+        <button type="button"  class="headerExportBtn"><i class="far fa-file-excel fa-2x"></i></button>
+        <button type="button"  class="headerExportBtn"><i class="far fa-file-pdf fa-2x"></i></button>
       </div>
     </div>
   </header>
   <main>
-    <section class="classicGridSection" role="application" style="display: inline-block;text-align: center;width: 400px;">
+    <section class="classicGridSection" role="application">
       <div class="classicGrid" role="grid">
         <!-- the rows of the grid -->
         <div class="classicGridDateCol" role="grid">
